content/_generated-doc/2.7/config/quarkus-kubernetes-client-kubernetes-client-build-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-client-kubernetes-client-build-config_configuration]]link:#quarkus-kubernetes-client-kubernetes-client-build-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.trust-certs]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.trust-certs[quarkus.kubernetes-client.trust-certs]`

[.description]
--
Whether or not the client should trust a self signed certificate if so presented by the API server
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.master-url]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.master-url[quarkus.kubernetes-client.master-url]`

[.description]
--
URL of the Kubernetes API server
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.namespace]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.namespace[quarkus.kubernetes-client.namespace]`

[.description]
--
Default namespace to use
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.ca-cert-file]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.ca-cert-file[quarkus.kubernetes-client.ca-cert-file]`

[.description]
--
CA certificate file
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.ca-cert-data]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.ca-cert-data[quarkus.kubernetes-client.ca-cert-data]`

[.description]
--
CA certificate data
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-cert-file]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-cert-file[quarkus.kubernetes-client.client-cert-file]`

[.description]
--
Client certificate file
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-cert-data]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-cert-data[quarkus.kubernetes-client.client-cert-data]`

[.description]
--
Client certificate data
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-file]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-file[quarkus.kubernetes-client.client-key-file]`

[.description]
--
Client key file
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-data]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-data[quarkus.kubernetes-client.client-key-data]`

[.description]
--
Client key data
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-algo]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-algo[quarkus.kubernetes-client.client-key-algo]`

[.description]
--
Client key algorithm
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-passphrase]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.client-key-passphrase[quarkus.kubernetes-client.client-key-passphrase]`

[.description]
--
Client key passphrase
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.username]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.username[quarkus.kubernetes-client.username]`

[.description]
--
Kubernetes auth username
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.password]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.password[quarkus.kubernetes-client.password]`

[.description]
--
Kubernetes auth password
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.token]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.token[quarkus.kubernetes-client.token]`

[.description]
--
Kubernetes oauth token
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.watch-reconnect-interval]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.watch-reconnect-interval[quarkus.kubernetes-client.watch-reconnect-interval]`

[.description]
--
Watch reconnect interval
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.watch-reconnect-limit]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.watch-reconnect-limit[quarkus.kubernetes-client.watch-reconnect-limit]`

[.description]
--
Maximum reconnect attempts in case of watch failure By default there is no limit to the number of reconnect attempts
--|int 
|`-1`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.connection-timeout]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.connection-timeout[quarkus.kubernetes-client.connection-timeout]`

[.description]
--
Maximum amount of time to wait for a connection with the API server to be established
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT10S`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.request-timeout]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.request-timeout[quarkus.kubernetes-client.request-timeout]`

[.description]
--
Maximum amount of time to wait for a request to the API server to be completed
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT10S`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.rolling-timeout]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.rolling-timeout[quarkus.kubernetes-client.rolling-timeout]`

[.description]
--
Maximum amount of time in milliseconds to wait for a rollout to be completed
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT15M`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.http-proxy]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.http-proxy[quarkus.kubernetes-client.http-proxy]`

[.description]
--
HTTP proxy used to access the Kubernetes API server
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.https-proxy]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.https-proxy[quarkus.kubernetes-client.https-proxy]`

[.description]
--
HTTPS proxy used to access the Kubernetes API server
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.proxy-username]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.proxy-username[quarkus.kubernetes-client.proxy-username]`

[.description]
--
Proxy username
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.proxy-password]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.proxy-password[quarkus.kubernetes-client.proxy-password]`

[.description]
--
Proxy password
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.no-proxy]]`link:#quarkus-kubernetes-client-kubernetes-client-build-config_quarkus.kubernetes-client.no-proxy[quarkus.kubernetes-client.no-proxy]`

[.description]
--
IP addresses or hosts to exclude from proxying
--|list of string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
